--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
